--- a/aula4-responsividade/about.html
+++ b/aula4-responsividade/about.html
@@ -9,7 +9,7 @@
   <body>
     <header class="cabecalho">
       <nav class="cabecalho__menu">
-        <a class="cabecalho__menu__Link" href="portfolio1.html">Home</a>
+        <a class="cabecalho__menu__Link" href="index.html">Home</a>
         <a class="cabecalho__menu__Link" href="about.html">Sobre mim</a>
       </nav>
     </header>
