--- a/aula4-responsividade/index.html
+++ b/aula4-responsividade/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="cabecalho">
       <nav class="cabecalho__menu">
-        <a class="cabecalho__menu__Link" href="portfolio1.html">Home</a>
+        <a class="cabecalho__menu__Link" href="index.html">Home</a>
         <a class="cabecalho__menu__Link" href="about.html">Sobre mim</a>
       </nav>
     </header>
@@ -46,7 +46,11 @@
           </a>
         </div>
       </section>
-      <img class="img-responsive" src="./assets/Imagem.png" alt="imagem desenvolvedora" />
+      <img
+        class="img-responsive"
+        src="./assets/Imagem.png"
+        alt="imagem desenvolvedora"
+      />
     </main>
     <footer class="rodape">
       <p>Desenvolvido por Alura.</p>
